bundled_metadata/force-app/main/default/objects/Feature_Policy_Item__c/Feature_Policy_Item__c.object-meta.xml
<CustomObject>
    <label>Feature Policy Item</label>
    <nameField>
        <displayFormat>FPI-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Policy Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>