bundled_metadata/force-app/main/default/objects/Feature_Policy_Item__c/fields/Item_Label__c.field-meta.xml
<CustomField>
    <fullName>Item_Label__c</fullName>
    <label>Item Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>