bundled_metadata/force-app/main/default/objects/Feature_Policy_Item__c/fields/Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>Policy_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Policy Id</label>
    <referenceTo>Feature_Policy__c</referenceTo>
    <relationshipLabel>Feature Policy Items</relationshipLabel>
    <relationshipName>Feature_Policy_Items</relationshipName>
    <type>Lookup</type>
</CustomField>