bundled_metadata/force-app/main/default/objects/Feature_Policy_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Context_Field__c</columns>
    <columns>Active__c</columns>
    <columns>Feature_Id__c</columns>
    <columns>Item_Id__c</columns>
    <columns>Item_Label__c</columns>
    <columns>Item_Description__c</columns>
    <columns>Policy_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>